--- a/QUIZ.html
+++ b/QUIZ.html
@@ -94,8 +94,13 @@
           <h3 class="my-4"><b><p>¿POR QUÉ ESTE <span style="color: red;">PROTOCOLO MATUTINO DE 4 MINUTOS</span> DE LA <span style="color: red;">ISLA DE THANGU VALLEY </span> PUEDE REALMENTE HACERTE PERDER <span style="color: red;">10 KILOS EN 21 DÍAS</span>?</p></b></h3>
           <div class="aviso-template">
             <p>HAZ CLIC EN LA PRESENTACIÓN Y MÍRALA HASTA EL FINAL PARA ENTENDER...</p>
-           <div id="vid_65f8c2ee39cdb20008088d28" style="position:relative;width:100%;padding: 56.25% 0 0;"> <img id="thumb_65f8c2ee39cdb20008088d28" src="https://images.converteai.net/68d798cc-1b0d-47b6-916a-b5e9df8ede6a/players/65f8c2ee39cdb20008088d28/thumbnail.jpg" style="position:absolute;top:0;left:0;width:100%;height:100%;object-fit:cover;display:block;"> <div id="backdrop_65f8c2ee39cdb20008088d28" style="position:absolute;top:0;width:100%;height:100%;-webkit-backdrop-filter:blur(5px);backdrop-filter:blur(5px);"></div> </div> <script type="text/javascript" id="scr_65f8c2ee39cdb20008088d28"> var s=document.createElement("script"); s.src="https://scripts.converteai.net/68d798cc-1b0d-47b6-916a-b5e9df8ede6a/players/65f8c2ee39cdb20008088d28/player.js", s.async=!0,document.head.appendChild(s); </script>
+           <div class="embed-responsive embed-responsive-16by9">
+            <iframe id="panda-42e40031-95b6-4819-a5c3-792fd5b69b7c" src="https://player-vz-60a6aa29-ad1.tv.pandavideo.com.br/embed/?v=42e40031-95b6-4819-a5c3-792fd5b69b7c" style="border:none;" allow="accelerometer;gyroscope;autoplay;encrypted-media;picture-in-picture" allowfullscreen=true width="720" height="360" fetchpriority="high"></iframe>
           </div>
+          <p><span id="numero-assistindo">237</span> personas están viendo ahora.</p>
+        </div>
+      </div>
+    </div>
   </header>
 
   <div class="text-center mt-4">
@@ -113,7 +118,6 @@
         cta1Element.classList.remove("d-none");
       }
     }, 0); // 1245 segundos em milissegundos
-</a>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
