--- a/QUIZ.html
+++ b/QUIZ.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
@@ -60,27 +61,18 @@
         transform: scale(1);
       }
     }
-
-    #numero-assistindo {
-      font-weight: bold;
-      color: #365899;
-    }
   </style>
   <script>
-    // Função para exibir o botão após um determinado tempo
-    setTimeout(function () {
-      var cta1Element = document.getElementById("cta1");
-      if (cta1Element) {
-        cta1Element.classList.remove("d-none");
-      }
-    }, 138000); // Tempo em milissegundos
-
-    // Função para atualizar a data atual
-    var dataAtualElement = document.getElementById("dataAtual");
-    if (dataAtualElement) {
-      var dataAtual = new Date();
-      dataAtualElement.textContent = dataAtual.toLocaleDateString('pt-BR');
-    }
+    !function(f,b,e,v,n,t,s)
+    {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
+    n.callMethod.apply(n,arguments):n.queue.push(arguments)};
+    if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
+    n.queue=[];t=b.createElement(e);t.async=!0;
+    t.src=v;s=b.getElementsByTagName(e)[0];
+    s.parentNode.insertBefore(t,s)}(window, document,'script',
+    'https://connect.facebook.net/en_US/fbevents.js');
+    fbq('init', '1729803194209156');
+    fbq('track', 'PageView');
   </script>
   <noscript><img height="1" width="1" style="display:none"
     src="https://www.facebook.com/tr?id= 1729803194209156&ev=PageView&noscript=1"
@@ -98,27 +90,34 @@
           <h3 class="my-4"><b><p>¿POR QUÉ ESTE <span style="color: red;">PROTOCOLO MATUTINO DE 4 MINUTOS</span> DE LA <span style="color: red;">ISLA DE THANGU VALLEY </span> PUEDE REALMENTE HACERTE PERDER <span style="color: red;">10 KILOS EN 21 DÍAS</span>?</p></b></h3>
           <div class="aviso-template">
             <p>HAZ CLIC EN LA PRESENTACIÓN Y MÍRALA HASTA EL FINAL PARA ENTENDER...</p>
-            <div class="embed-responsive embed-responsive-16by9">
-              <iframe id="panda-42e40031-95b6-4819-a5c3-792fd5b69b7c" src="https://player-vz-60a6aa29-ad1.tv.pandavideo.com.br/embed/?v=42e40031-95b6-4819-a5c3-792fd5b69b7c" style="border:none;" allow="accelerometer;gyroscope;autoplay;encrypted-media;picture-in-picture" allowfullscreen=true width="720" height="360" fetchpriority="high"></iframe>
-            </div>
-            <p><span id="numero-assistindo">237</span> personas están viendo ahora.</p>
+           <div class="embed-responsive embed-responsive-16by9">
+            <iframe id="panda-42e40031-95b6-4819-a5c3-792fd5b69b7c" src="https://player-vz-60a6aa29-ad1.tv.pandavideo.com.br/embed/?v=42e40031-95b6-4819-a5c3-792fd5b69b7c" style="border:none;" allow="accelerometer;gyroscope;autoplay;encrypted-media;picture-in-picture" allowfullscreen=true width="720" height="360" fetchpriority="high"></iframe>
           </div>
+          <p><span id="numero-assistindo">237</span> personas están viendo ahora.</p>
         </div>
       </div>
     </div>
   </header>
 
   <div class="text-center mt-4">
-    <a id="cta1" href="https://pay.hotmart.com/C85794040M?checkoutMode=10" class="btn-laranja">
+    <a id="cta1" href="https://pay.hotmart.com/C85794040M?checkoutMode=10" class="btn-laranja d-none">
       <span class="span-btn">¡QUIERO UNIRME!</span>
       <span class="span-btn2"></span>
     </a>
   </div>
 
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+  <script>
+    // Função para exibir o botão após 1380 segundos
+    setTimeout(function () {
+      var cta1Element = document.getElementById("cta1");
+      if (cta1Element) {
+        cta1Element.classList.remove("d-none");
+      }
+    }, 1245000); // 1245 segundos em milissegundos
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZ
-
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+  <script src="./assets/js/com.js"></script>
   </style>
 <div id="division-bSoJGo5853747" class="bMFJBJ9016529">
 <style>.px-1{padding-left:4px;padding-right:4px}.pt-0.5{padding-top:2px}.mt-4{margin-top:16px}@media (min-width:640px){.sm\:text-sm{font-size:14px;line-height:20px}}.mt-2{margin-top:8px}.mb-2{margin-bottom:8px}.flex{display:flex}.w-full{width:100%}.space-x-1>:not([hidden])~:not([hidden]){margin-left:.25rem}.items-center{align-items:center}.font-\[Helvetica\]{font-family:Helvetica,Arial,sans-serif}.cursor-pointer{cursor:pointer}.rounded-full{border-radius:99999px}.h-12{height:48px}.w-12{width:48px}.flex-col{flex-direction:column}.py-1{padding-top:4px;padding-bottom:4px}.px-3{padding-left:12px;padding-right:12px}.pl-0\.5,.px-0\.5{padding-left:2px}.rounded-\[18px\]{border-radius:18px}.bg-stone-100{background-color:#f5f5f4}.px-0\.5{padding-right:2px}.font-semibold{font-weight:600}.text-\[\#365899\]{color:#365899}.text-\[13px\]{font-size:13px}.leading-4{line-height:16px}.hover\:underline:hover{text-decoration-line:underline}.text-sm{font-size:14px}.relative{position:relative}.justify-between{justify-content:space-between}.grow{flex-grow:1}.text-xs{font-size:12px}.text-\[\#90949c\]{color:#90949c}.ml-px{margin-left:1px}.gap-1{gap:4px}.w-fit{width:fit-content}.hidden{display:none}.-mt-1{margin-top:-4px}.-mt-2{margin-top:-8px}.mr-2{margin-right:8px}.h-4,.h-5{height:16px}.drop-shadow{--tw-drop-shadow:drop-shadow(0 1px 2px rgba(0, 0, 0, 0.1)) drop-shadow(0 1px 1px rgba(0, 0, 0, 0.06));filter:var(--tw-drop-shadow)}.bg-slate-50{background-color:#f8fafc}.py-0\.5{padding-top:2px;padding-bottom:2px}.pr-1{padding-right:4px}.block{display:block}.w-4{width:16px}.z-10{z-index:10}.-ml-1{margin-left:-4px}.ml-4{margin-left:16px}.gap-x-0\.5{column-gap:2px}.mr-0\.5{margin-right:2px;margin-left:2px}.border-l{border-left-width:1px}.border-slate-300{border-color:#cbd5e1}.border-dotted{border-style:dotted}.ml-5{margin-left:20px}.h-8{height:32px}.w-8{width:32px}.h-10{height:40px}.w-10{width:40px}@media (min-width:640px){.sm\:w-16{width:64px}.sm\:ml-12{margin-left:48px}}.pl-2{padding-left:8px}</style>
